Fix css animations on mobile devices Fix Safari iOS bug not getting the correct height of the viewport with 'height: 100vh'

--- a/src/Components/BoardGrid/BoardCell.razor.css
+++ b/src/Components/BoardGrid/BoardCell.razor.css
@@ -1,11 +1,13 @@
 ﻿/* entire container, keeps perspective */
 .flip-container {
     perspective: 1000px;
+    -webkit-perspective: 1000px;
 }
 
 /* flip the pane */
 .doflip {
     transform: rotateX(180deg);
+    -webkit-transform: rotateX(180deg);
 }
 
 .flip-container, .front, .back {
@@ -16,10 +18,13 @@
 
 /* flip speed goes here */
 .flipper {
-    transition: 0.6s;
-    transform-style: preserve-3d;
     position: relative;
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     transform-origin: 100% 34px; /* half of height plus margin */
+    -webkit-transform-origin: 100% 34px;
 }
 
 /* hide back of pane during swap */
@@ -33,9 +38,11 @@
 /* front pane, placed above back */
 .front {
     transform: rotateX(0deg);
+    -webkit-transform: rotateX(0deg);
 }
 
 /* back, initially hidden pane */
 .back {
     transform: rotateX(180deg);
+    -webkit-transform: rotateX(180deg);
 }
